# 0.026
# Created Registration Form. API not configured yet.
# Working on Registration API.

# 0.025
# Merging code from live server to fix SPA glitch from previous version
# [Register] page created. API not built yet.
# Logout not configured properly after merging code.
# Login bug fixed where it bypassed login API and allowed anyone to log in.

# 0.024
# Merging to AWS
# Buggy version
# The merge to AWS broke the react app due to how the Browser Routing was was set up on the test server.
# It was not compatible with single page mode on the build mode.
# Being stiched together on a new project file before being meged in.
# API connection changes to reflect live server config

# 0.023
# Introduced Logout API.
# [Login] available, then grants access to ALL pages
# [Home] not rendering BEFORE LOGIN due to state bug. 
# Upon logout, [home] not rendering due to stae bug.
# Buggy version 

# 0.022
# [Login] GET login API correctly fetching data and passing data through to Homepage.
# Authentication not working properly
# NavBar elements Hidden until user logs in 
# State maintains user info after login on [Session] then [Home] but loses state after that.

# 0.021
# [Users] Fetching and displaying correct data from db. Displays data for all users.
# GET users API ✅
# [Users] -> [User] Displaying correct data

# 0.020 
# stable version
# [Navbar] Admin template established
# Inserted more data into db to test front end
# Added sponsor watermark placeholders

# 0.019
# API changes.
# [ListSessions] {session_id}-> [Session]
# [Session] Displaying correct data from DB! ^_^ 
# Code cleanup
# UX/UI updated 

# 0.018
# API changes, stable version
# [Session] init to replace [Session_Info], but not receiving data correctly.
# Session_Info has demo of session fetching API.
# Testing passing data through React Routes

# 0.017
# [Sessions] Linking to Session page, data not displaying correctly yet.
# Questionable Attempt at fetching subsession data

# 0.016