@@ -1,6 +1,7 @@
 # 0.026
 # Created Registration Form. API not configured yet.
 # Working on Registration API.
+# Registration API Complete. Users can register.
 
 # 0.025
 # Merging code from live server to fix SPA glitch from previous version
